fix: make search filter button smaller

--- a/common/components/Button/Button.module.scss
+++ b/common/components/Button/Button.module.scss
@@ -88,7 +88,7 @@
   border: 2px solid $dark-beige;
   box-sizing: border-box;
   gap: $spacing--8;
-  padding: 0.5785rem 1.25rem;
+  padding: 0.5rem 1rem;
   width: auto;
 
   span {
