--- a/h5p-bildetema/src/components/SearchPage/SearchFilter/SearchFilterDialog.module.scss
+++ b/h5p-bildetema/src/components/SearchPage/SearchFilter/SearchFilterDialog.module.scss
@@ -107,8 +107,8 @@
   align-items: center;
   justify-content: center;
   color: $white;
-  width: 2rem;
-  height: 2rem;
+  width: 1.75rem;
+  height: 1.75rem;
   border-radius: 100%;
   background-color: $dark-teal;
   line-height: 1;
